loading view changed

--- a/android_base_utility/build.gradle
+++ b/android_base_utility/build.gradle
@@ -19,6 +19,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    repositories {
+        maven {
+            url "https://jitpack.io"
+        }
+    }
 }
 
 dependencies {
@@ -31,6 +36,6 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.4.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
-    compile 'com.wang.avi:library:2.1.2'
+    compile 'com.github.ybq:Android-SpinKit:1.1.0'
     compile 'com.google.code.gson:gson:2.2.4'
 }
