--- a/android_base_utility/build.gradle
+++ b/android_base_utility/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
     compile 'com.github.ybq:Android-SpinKit:1.1.0'
     compile 'com.google.code.gson:gson:2.2.4'
+    compile 'com.android.support:recyclerview-v7:25+'
 }
