--- a/android_base_utility/src/main/AndroidManifest.xml
+++ b/android_base_utility/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 
     package="com.ebs.android_base_utility">
 
-    <application android:allowBackup="true" android:label="@string/app_name"
+    <application android:allowBackup="false" android:label="@string/app_name"
         android:supportsRtl="true">
 
     </application>
